<resources>
    <string name="app_name">Medical Emergency</string>
    <string name="title_activity_home_acrivity">Medical Emergency</string>
    <string name="title_activity_doctor">Doctors</string>
    <string name="title_activity_maps">Map</string>
    <string name="password">PassWord</string>
    <string name="login">LogIn</string>
    <string name="no_account">no account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_google">LogIn With Google</string>
    <string name="e_mail">E_Mail</string>
    <string name="navbar_open">open navbar</string>
    <string name="navbar_close">close navbar</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="information">information</string>
    <string name="Phone_number">Phone Number</string>
    <string name="choose_type">Choose Type</string>


    <string-array name="types">
        <item>Doctor</item>
        <item>Nurse</item>
    </string-array>

</resources>
