<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"

        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".2"
        android:background="#000"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent" />

    <com.fivehundredpx.android.blur.BlurringView
        android:id="@+id/blurring_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:blurRadius="11"
        app:downsampleFactor="10"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:overlayColor="#99FFFFFF" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/mail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mail_ic"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:layout_weight="0.07"
                android:background="@drawable/round_pack_ground"
                android:padding="5dp"
                android:src="@drawable/mail_icn" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/e_mail_layout_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.8">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail_layout">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/lock"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:layout_weight="0.07"
                android:background="@drawable/round_pack_ground"
                android:padding="5dp"
                android:src="@drawable/lock" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.8"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/login_but"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_pack_ground"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/login_with_google_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/login_with_google_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_red_back_ground"
            app:layout_constraintBottom_toBottomOf="@+id/login_but"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_but">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_google_plus_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:text="@string/login_with_google"-->
            <!--android:textColor="#fff"-->
            <!--android:textSize="20sp"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent" />-->

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>